# tvm-upload

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .yamllint  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  QUICK_START.md  README.md  UNIT_TEST_REVIEW_REPORT.md  debug_test.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.py  test_quick.sh  verify_aws_credentials.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: test-e2e.yml  test-integration.yml  test-unit.yml
config/: config.production.yaml  config.yaml.example
docs/: AUTONOMOUS_TESTING_GUIDE.md  DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS_OIDC_SETUP.md  INSTALL_SCRIPTS_COMPARISON.md  INSTALL_SCRIPT_UPDATES.md  QUICK_START.md  README.md  TESTING_STRATEGY_OVERVIEW.md  autonomous_testing_guide.md  complete_reference.md  configuration_reference.md  deployment_guide.md  error_handling_guide.md  faq.md  github_actions_oidc_setup.md  manual_testing_guide.md  quick_start.md  s3_organization_guide.md  testing_strategy_overview.md  workflow_improvements.md
documents/: aws_authentication_setup_for_gitactions.md
scripts/: DEPLOYMENT_KIT_README.md  README.md  cleanup_test_s3_data.sh  health_check.sh  install_systemd.sh  run_manual_tests.sh  run_tests.sh  test_s3_upload.py  uninstall.sh
scripts/deployment/: health_check.sh  install.sh  verify_deployment.sh
scripts/diagnostics/: verify_aws_credentials.sh
scripts/lib/: create_test_config.sh  test_helpers.sh
scripts/manual-tests/: 01_basic_upload.sh  02_source_detection.sh  03_file_date.sh  06_duplicate_prevention.sh  07_disk_management.sh  10_error_handling.sh  11_operational_hours.sh  12_service_restart.sh  15_startup_scan.sh  16_emergency_cleanup.sh  README.md
scripts/testing/: run_manual_tests.sh  run_tests.sh  test_s3_upload.py  test_watchdog_debug.py
scripts/testing/gap-tests/: 17_env_var_expansion.sh  18_all_sources_complete.sh  19_deferred_deletion.sh  20_queue_crash_recovery.sh  21_registry_cleanup.sh  22_env_var_expansion.sh  23_config_validation.sh  25_concurrent_operations.sh  26_resource_limits.sh  27_security_scenarios.sh  28_performance_benchmarks.sh  29_full_system_integration.sh  30_production_simulation.sh  README.md  README_TEST_30.md  run_gap_tests.sh  run_production_simulation.sh
scripts/testing/manual-tests/: 01_basic_upload.sh  01_startup_scan.sh  02_source_detection.sh  03_file_date.sh  04_cloudwatch_metrics.sh  05_cloudwatch_alarms.sh  06_duplicate_prevention.sh  07_disk_management.sh  08_batch_upload.sh  09_large_file.sh  10_error_handling.sh  11_operational_hours.sh  12_service_restart.sh  13_pattern_matching.sh  14_recursive_monitoring.sh  15_basic_upload.sh  15_startup_scan.sh  16_emergency_cleanup.sh  17_deletion_safety.sh  README.md
src/: cloudwatch_manager.py  config_manager.py  disk_manager.py  file_monitor.py  main.py  queue_manager.py  upload_manager.py  utils.py
systemd/: tvm-upload.service
tests/: conftest.py  test_config.py  test_disk.py  test_main.py  test_monitor.py  test_upload.py  test_watchdog_debug.py
tests/e2e/: conftest.py  test_cloudwatch_real.py  test_end_to_end_real.py  test_s3_real.py
tests/integration/: conftest.py  test_deletion_policies.py  test_end_to_end.py  test_integration.py  test_main.py
tests/unit/: test_cloudwatch.py  test_config.py  test_disk.py  test_disk_emergency.py  test_monitor.py  test_queue.py  test_upload.py
tvm_upload.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
